10. Преобразование матрицы чисел в список чисел. FlatMap. [#110228 #518657]